--- a/assignment_intro/assignment.ipynb
+++ b/assignment_intro/assignment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert nx.__version__ == '2.5'"
+    "assert nx.__version__ == '2.5.1'"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -109,13 +109,14 @@
    "outputs": [],
    "source": [
     "def read_and_merge_graphs(path1, path2):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    net1 = nx.read_edgelist(path1)\n",
+    "    net2 = nx.read_adjlist(path2)\n",
+    "    return nx.compose(net1, net2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -156,16 +157,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2938', '1692', '1779', '1659', '2873']"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(G.nodes)[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -182,13 +194,12 @@
    "outputs": [],
    "source": [
     "def convert_node_names_to_int(G):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return nx.convert_node_labels_to_integers(G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -202,7 +213,8 @@
      "schema_version": 3,
      "solution": false,
      "task": false
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -229,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -246,13 +258,12 @@
    "outputs": [],
    "source": [
     "def convert_to_directed_graph(G):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return nx.to_directed(G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -269,13 +280,12 @@
    "outputs": [],
    "source": [
     "def read_directed_graph(path1):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    return nx.read_edgelist(path1, create_using=nx.DiGraph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1633,7 +1643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
